# theftcomm

./: .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  stack.yaml  theftcomm.cabal
app/: Main.hs
src/Mitsfs/: Theftcomm.hs
src/Mitsfs/Theftcomm/: Config.hs  DoorLog.hs  ICalendar.hs  Iterate.hs  Tif.hs  Validate.hs
test/: Spec.hs
test/data/: keyholders.json  library-schedule-2016-07-11.ics
test/data/daily_hour_data/raw/: tif-raw-data-2016-07-18.csv  tif-raw-data-2016-07-19.csv  tif-raw-data-2016-07-20.csv  tif-raw-data-2016-07-21.csv  tif-raw-data-2016-07-23.csv  tif-raw-data-2016-07-24.csv  tif-raw-data-2016-07-25.csv  tif-raw-data-2016-07-26.csv  tif-raw-data-2016-07-27.csv  tif-raw-data-2016-07-28.csv  tif-raw-data-2016-07-30.csv  tif-raw-data-2016-07-31.csv  tif-raw-data-2016-08-02.csv  tif-raw-data-2016-08-03.csv  tif-raw-data-2016-08-04.csv  tif-raw-data-2016-08-06.csv  tif-raw-data-2016-08-07.csv  tif-raw-data-2016-08-08.csv  tif-raw-data-2016-08-09.csv  tif-raw-data-2016-08-10.csv  tif-raw-data-2016-08-11.csv  tif-raw-data-2016-08-13.csv  tif-raw-data-2016-08-14.csv  tif-raw-data-2016-08-15.csv  tif-raw-data-2016-08-16.csv  tif-raw-data-2016-08-17.csv  tif-raw-data-2016-08-18.csv  tif-raw-data-2016-08-19.csv  tif-raw-data-2016-08-20.csv  tif-raw-data-2016-08-21.csv  tif-raw-data-2016-08-22.csv  tif-raw-data-2016-08-23.csv  tif-raw-data-2016-08-24.csv  tif-raw-data-2016-08-25.csv  tif-raw-data-2016-08-27.csv  tif-raw-data-2016-08-28.csv  tif-raw-data-2016-08-29.csv  tif-raw-data-2016-08-30.csv  tif-raw-data-2016-08-31.csv  tif-raw-data-2016-09-01.csv  (+39 more)
