name:                theftcomm
version:             0.1.0.0
synopsis:            Theftcomm tools for MITSFS
description:         Please see README.md
homepage:            https://github.com/pweaver/theftcomm#readme
license:             BSD3
license-file:        LICENSE
author:              Pweaver
maintainer:          pweaver@mit.edu
copyright:           2016 Paul Weaver
category:            Command Line
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , iCalendar
  default-language:    Haskell2010

executable theftcomm
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , theftcomm
                     , optparse-applicative
  default-language:    Haskell2010

test-suite theftcomm-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , theftcomm
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pweaver/theftcomm
