name:                theftcomm
version:             0.1.0.1
synopsis:            Theftcomm tools for MITSFS
description:         Please see README.md
homepage:            https://github.mit.edu/mitsfs/theftcomm#readme
license:             BSD3
license-file:        LICENSE
author:              Pweaver
maintainer:          pweaver@mit.edu
copyright:           2016 Paul Weaver
category:            Command Line
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
data-files:          "test/data/keyholders.json"
                     "test/data/w20-473.log"
                     "test/data/calendar_logs/*.ics.gz"
                     "test/data/daily_hour_data/raw/*.csv"


library
  hs-source-dirs:      src
  exposed-modules:     Mitsfs.Theftcomm
  other-modules:       Mitsfs.Theftcomm.Config
                     , Mitsfs.Theftcomm.DoorLog
                     , Mitsfs.Theftcomm.ICalendar
                     , Mitsfs.Theftcomm.Iterate
                     , Mitsfs.Theftcomm.Tif
                     , Mitsfs.Theftcomm.Validate
                     , Paths_theftcomm
  build-depends:       base >= 4.7 && < 5
                     , iCalendar >= 0.5.0
                     , aeson
                     , bytestring
                     , cassava
                     , containers
                     , data-default
                     , HaskellNet
                     , lens
                     , lens-datetime
                     , text
                     , time
                     , vector
                     , zlib
  default-language:    Haskell2010

executable theftcomm
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  ld-options:          -static
  build-depends:       base
                     , theftcomm
                     , optparse-applicative
                     , time
  default-language:    Haskell2010

test-suite theftcomm-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , theftcomm
                     , time
                     , hspec
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.mit.edu/mitsfs/theftcomm
